libs/modkit-macros/tests/ui/fail/lifecycle_runner_not_async.stderr
error: runner must be async
 --> tests/ui/fail/lifecycle_runner_not_async.rs:8:5
  |
8 |     fn run(&self, _cancel: CancellationToken) {}
  |     ^^

warning: unused import: `tokio_util::sync::CancellationToken`
 --> tests/ui/fail/lifecycle_runner_not_async.rs:2:5
  |
2 | use tokio_util::sync::CancellationToken;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
